--- a/src/main/resources/templates/process/processList.html
+++ b/src/main/resources/templates/process/processList.html
@@ -31,7 +31,7 @@
                     </span>
                 </td>
                 <td class="text-center">
-                    <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}" class="btn btn-refoam btn-sm" role="button">품질검수</a>
+<!--                    <a href="#" th:href="@{/process/{id}/list(id=${process.id})}" class="btn btn-refoam btn-sm" role="button">품질검수</a>-->
                 </td>
             </tr>
             </tbody>
