--- a/src/main/resources/templates/employee/createEmployeeForm.html
+++ b/src/main/resources/templates/employee/createEmployeeForm.html
@@ -32,7 +32,7 @@
             </div>
             <div class="text-end">
                 <a th:href="@{/employee/list}" class="btn btn-dark me-3">리스트</a>
-                <button type="submit" class="btn btn-refoam">등록</button>
+                <button type="submit" class="btn btn-refoam px-3">등 록</button>
             </div>
         </form>
     <div class="col-md-2"></div>
