--- a/src/main/resources/templates/material/editMaterialForm.html
+++ b/src/main/resources/templates/material/editMaterialForm.html
@@ -1,9 +1,9 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
-    <h2 class="hy-4 headerTitle">재고 수정</h2>
     <div class="row">
         <div class="col-md-2"></div>
         <form role="form" th:object="${materialForm}" method="post" class="py-2 col-md-8">
+            <h2 class="py-4">재고 수정</h2>
             <div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
                 <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
             </div>
@@ -28,8 +28,8 @@
                 <input class="form-control" th:field="*{materialDate}" type="text" disabled>
             </div>
             <div class="text-end">
-                <button type="submit" class="btn btn-refoam me-3">수정</button>
-                <button type="button" class="btn btn-delete" th:onclick="|location.href='@{/material/list}'|">리스트</button>
+                <button type="button" class="btn btn-dark me-3" th:onclick="|location.href='@{/material/list}'|">리스트</button>
+                <button type="submit" class="btn btn-refoam">수 정</button>
             </div>
         </form>
         <div class="col-md-2"></div>
