--- a/src/main/resources/templates/material/createMaterialForm.html
+++ b/src/main/resources/templates/material/createMaterialForm.html
@@ -37,20 +37,20 @@
                                 <option value="">원자재를 선택하세요</option>
                                 <option th:each="materialName2 : ${T(com.example.refoam.domain.MaterialName).values()}" th:text="${materialName2}" th:value="${materialName2}"></option>
                             </select>
-                            <button th:type="submit" class="btn btn-refoam px-3 ms-auto">예측하기</button>
+                            <button th:type="submit" class="btn btn-refoam px-2 ms-auto">예측하기</button>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-7 my-2">
                             <label class="form-label logo-font fs-4 ">날짜</label>
-                            <hr class="p-0">
+                            <hr class="mt-0 mb-3">
                             <input class="form-control mb-2" type="date" th:field="*{orders[0].date}">
                             <input class="form-control mb-2" type="date" th:field="*{orders[1].date}">
                             <input class="form-control mb-2" type="date" th:field="*{orders[2].date}">
                         </div>
                         <div class="col-5 my-2">
                             <label class="form-label logo-font fs-4">수량</label>
-                            <hr class="p-0">
+                            <hr class="mt-0 mb-3">
                             <input class="form-control mb-2" type="number" th:field="*{orders[0].qty}">
                             <input class="form-control mb-2" type="number" th:field="*{orders[1].qty}">
                             <input class="form-control mb-2" type="number" th:field="*{orders[2].qty}">
@@ -59,7 +59,7 @@
                         <input type="hidden" th:field="*{orders[1].materialName2}" id="material1">
                         <input type="hidden" th:field="*{orders[2].materialName2}" id="material2">
                     </div>
-
+                    <hr class="mt-0 mb-3">
                     <div class="mb-2">
                         <label class=" form-label logo-font fs-4">예측 결과</label>
                     </div>
