--- a/src/main/resources/templates/material/materialList.html
+++ b/src/main/resources/templates/material/materialList.html
@@ -79,7 +79,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-refoam" data-bs-dismiss="modal">취소</button>
                         <button type="button" class="btn btn-delete"
-                                th:onclick="|location.href='@{/material/{id}/delete(id=${material.id})}'|">삭 제</button>
+                                th:onclick="|location.href='@{/quality/{id}/check(id=${standart.id})}'|">삭 제</button>
                     </div>
                 </div>
             </div>
