navbar height a little change

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <nav th:fragment="navbar(activeMenu)"
-     class="navbar navbar-expand-md nav-bg fixed-top">
+     class="navbar navbar-expand-md nav-bg fixed-top py-0">
     <!-- 메뉴바 시작-->
     <div class="container-fluid">
         <a class="navbar-brand nav-font" th:href="@{/main}">
