--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
-<footer th:fragment="footer" class="footer-bg py-2">
-        <div class="container text-center text-white">
-            <p class="my-3 nav-font">&copy Refoam ALL RIGHTS RESERVED</p>
+<footer th:fragment="footer" class="footer-bg mt-auto">
+        <div class="align-middle text-center py-2">
+            <p class="m-1">&copy; Refoam ALL RIGHTS RESERVED</p>
         </div>
 </footer>
 
