--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
         <div class="row w-100">
             <div class="col-lg-4 col-md-3"></div>
             <div class="col-lg-4 col-md-6">
-                <form class="border p-4 rounded shadow-sm bg-white" th:object="${loginForm}" method="post" th:action="@{/}">
+                <form class="border p-4 rounded shadow-sm bg-white" th:object="${loginForm}" method="post" th:action="@{/login}">
                     <!-- ✅ redirectURL hidden 필드 추가 -->
 <!--                    name="redirectURL": 컨트롤러에서 @RequestParam("redirectURL")로 받을 수 있게 함
                         th:value="${param.redirectURL}": 현재 요청 URL에 있는 redirectURL 파라미터를 폼으로 넘김-->
