--- a/src/main/resources/templates/process/processList.html
+++ b/src/main/resources/templates/process/processList.html
@@ -1,7 +1,10 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
     <h2 class="py-4">공정 결과</h2>
-    <a href="#" th:href="@{/quality/{id}/check(id=${orderId})}" class="btn btn-refoam ms-auto" role="button">전체 품질검수</a>
+    <div class="mb-3">
+        <a href="#" th:href="@{/quality/{id}/check(id=${orderId})}" th:disabled="${qualityCheckCount}<0" class="btn btn-refoam ms-auto" role="button">전체 품질검수</a>
+        <!--th:disabled="${qualityCheckCount}==null"-->
+    </div>
     <div class="table-responsive table-lg">
         <table class="table table-hover table-striped">
             <thead>
@@ -30,7 +33,8 @@
                 <td class="text-center">
                     <!--                    <a href="#" th:href="@{/process/{id}/list(id=${process.id})}" class="btn btn-refoam btn-sm" role="button">품질검수</a>   th:onclick="|location.href='@{/quality/{id}/check(id=${process.standard.id})}'|"-->
                     <!-- Button trigger modal -->
-                    <button type="button"  class="btn btn-refoam btn-sm" data-bs-toggle="modal" th:attr="data-bs-target='#exampleModal'+${process.standard.id}">
+                    <button type="button"  class="btn btn-refoam btn-sm" data-bs-toggle="modal" th:attr="data-bs-target='#exampleModal'+${process.standard.id}"
+                    th:disabled="${process.standard.qualityChecks.isEmpty()}">
                         품질검수
                     </button>
                     <!-- Modal -->
@@ -147,7 +151,7 @@
                     <td class="text-center" colspan="2">
                         <!--                    <a href="#" th:href="@{/process/{id}/list(id=${process.id})}" class="btn btn-refoam btn-sm" role="button">품질검수</a>   th:onclick="|location.href='@{/quality/{id}/check(id=${process.standard.id})}'|"-->
                         <!-- Button trigger modal -->
-                        <button type="button"  class="btn btn-refoam btn-sm" data-bs-toggle="modal" th:attr="data-bs-target='#exampleModal'+${process.standard.id}">
+                        <button type="button"  class="btn btn-refoam btn-sm" data-bs-toggle="modal" th:attr="data-bs-target='#exampleModal'+${process.standard.id}" th:disabled="${process.standard.qualityChecks.isEmpty()}">
                             품질검수
                         </button>
                         <!-- Modal -->
